--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,12 @@
 
 /* Your CSS Code here. */
+#container{
+	width:300px;
+	background-color:#ADD8E6;
+	border:15px solid blue;
+	padding:50px;
+	margin:20px;
+	
+	
+	
+	}
